--- a/hwfeday1/src/main/resources/static/index.html
+++ b/hwfeday1/src/main/resources/static/index.html
@@ -25,21 +25,21 @@
     <tr>
       <th scope="row">1</th>
       <td>회원공지</td>
-      <td>회원전용 공지내용입니다</td>
+      <td><a href="/readdetail1.html">회원전용 공지내용입니다</a></td>
       <td>관리자</td>
       <td>2024-08-06</td>
     </tr>
     <tr>
       <th scope="row">2</th>
       <td>비회원공지</td>
-      <td>회원 가입에 대한 공지입니다</td>
+      <td><a href="/readdetail2.html">회원 가입에 대한 공지입니다</a></td>
       <td>관리자</td>
       <td>2024-08-05</td>
     </tr>
     <tr>
       <th scope="row">3</th>
       <td>모든 회원</td>
-      <td>전체 공지입니다</td>
+      <td><a href="/readdetail3.html">전체 공지입니다</a></td>
       <td>관리자</td>
       <td>2024-08-04</td>
     </tr>
